--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -270,11 +270,11 @@
           <br />
           <ng-container *ngIf="form.get('orderType').value == 'Buy'">
             <!-- <label formControlName="cryptoBitcoinSGPrice">$(bid/ask)</label> -->
-            <label>$(bid/ask)</label>
+            <label class="move">$(bid/ask)</label>
           </ng-container>
           <ng-container *ngIf="form.get('orderType').value == 'Sell'">
             <!-- <label formControlName="cryptoBitcoinSGPrice">$(ask/bid)</label> -->
-            <mat-label>$(ask/bid)</mat-label>
+            <mat-label class="move">$(ask/bid)</mat-label>
           </ng-container>
         </div>
       </div>
@@ -355,9 +355,13 @@
         type="submit"
         [disabled]="form.invalid"
       >
-        Add
+        Submit
       </button>
-      <button mat-raised-button color="warn" (click)="restartForm(form)">
+      <button
+        mat-raised-button
+        color="warn"
+        (click)="restartForm(form, formDirective)"
+      >
         Reset
       </button>
     </div>
